# ChangeLog for sys-kernel/linux-firmware
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/linux-firmware/ChangeLog,v 1.105 2014/09/14 09:20:51 maekke Exp $

  14 Sep 2014; Markus Meier <maekke@gentoo.org> linux-firmware-20140603.ebuild:
  arm stable, bug #521380

  04 Sep 2014; Jeroen Roovers <jer@gentoo.org> linux-firmware-20140603.ebuild:
  Stable for HPPA (bug #521380).

*linux-firmware-20140809 (28 Aug 2014)

  28 Aug 2014; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +linux-firmware-20140809.ebuild:
  New snapshot.

  04 Aug 2014; Raúl Porcel <armin76@gentoo.org>
  linux-firmware-20131230.ebuild:
  alpha/arm64/ia64/sparc stable wrt #508982

  30 Jul 2014; Anthony G. Basile <blueness@gentoo.org>
  linux-firmware-20131230.ebuild:
  Stable on ppc64, bug #508982

  13 Jul 2014; Agostino Sarubbo <ago@gentoo.org> linux-firmware-20131230.ebuild:
  Stable for ppc, wrt bug #508982

  09 Jul 2014; Mikle Kolyada <zlogene@gentoo.org>
  linux-firmware-20131230.ebuild:
  x86 stable wrt bug #508982

  08 Jul 2014; Mikle Kolyada <zlogene@gentoo.org>
  linux-firmware-20131230.ebuild:
  Drop live keywords

  07 Jul 2014; Chema Alonso <nimiux@gentoo.org> linux-firmware-20131230.ebuild:
  Stable for amd64 wrt bug #508982

  15 Jun 2014; Markus Meier <maekke@gentoo.org> linux-firmware-20131230.ebuild:
  arm stable, bug #508982

  06 Jun 2014; Jeroen Roovers <jer@gentoo.org> linux-firmware-20131230.ebuild:
  Stable for HPPA (bug #508982).

*linux-firmware-20140603 (05 Jun 2014)

  05 Jun 2014; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +linux-firmware-20140603.ebuild:
  New snapshot.

  06 Apr 2014; Mike Frysinger <vapier@gentoo.org>
  linux-firmware-20130728.ebuild, linux-firmware-20131230.ebuild,
  linux-firmware-99999999.ebuild:
  Add arm64 love.

  25 Jan 2014; Mark Wright <gienah@gentoo.org> linux-firmware-20130728.ebuild,
  linux-firmware-20131230.ebuild, linux-firmware-99999999.ebuild: