@@ -5,17 +5,31 @@ DIST linux-firmware-20130728.tar.xz 19243912 SHA256 dff71cb96eb286e4cacc0d0fb033
 DIST linux-firmware-20131230.tar.xz 21214036 SHA256 7189fd4cf954086a349286ca79d9275f6a2d79a7c0fd5c7cf6d41d25a863cc77 SHA512 4fe92db99cfd5bc0806ef5863fa6709501dc2c761b9af92689ff15fa8f9a97ca6086bbb3a79fa97e6bde15f8f67c0ae06eb38323fe5182f5406cf9601c4e6b57 WHIRLPOOL aaac2efb4a205bba80c3bad9c6b7eb38ec4fcde5b0233952eb1f58b6cc6afcf5059fc3738ea8a6f9e02de937bcaaf866ddf8021614ccc2cb067b665466ce2ea5
 DIST linux-firmware-20140603.tar.xz 23299316 SHA256 f45cb7aa37fd52f65289389ee5b112235e8044bd6f0926f070dfee8c8118b749 SHA512 93add92b2b25fd5001e84e66b4c3e28be4ba99827d45758bc8d251ee359d09d88ae8057978a800b26d32e7711bab14a19191a53fc48faf47b76e172b8d07f464 WHIRLPOOL 6cf7a6d845f545ec176994788ee0bc25b884f33a5d24f599757ce5e6e2cfeae47c796ef968c44f5c6de74c3fa44614b9c7056453923f31275f7b877865bf76e8
 DIST linux-firmware-20140809.tar.xz 24031360 SHA256 3286490a4e0b435309067005f7645e556caec0b725806cbd667b320955cebc4b SHA512 a260954258cd1c8804abfd45eb7214de08fc78d03873af48943900e48aa4218183d40f3e1a62195099318d99bbf28f22a223c832408d06ace4c358043e3ac6e4 WHIRLPOOL 0c6e15e3667865c595a0794ca093792e9167ac23bd161847aa0bae48b2638f0a83aa33c6273f5c2e5016cefeaf2892e4ef1816ba3fb67c55d30bcb6fa4afad63
+DIST linux-firmware-20140902.tar.xz 24277312 SHA256 3dbf463d6deb559ce071de7f9f98547fa55b293be43baca7829326f1c523d826 SHA512 e23ae282ae0caf6891f889d670f4ddb61d254a710c5345c4bb0b0e2603d20cb45f7b341e828fbf8ca6dded40c54dad0076957b1ecfaea3512dfa7ee373ab3322 WHIRLPOOL 6a2a4c3c0f5c5b553fd1195e07294a16b52e5b7b5db0fbcc89edfc21fe83aece110d0914c4452b0f901e13e8b25d61e56eaddf49953e70ab327d705ecd45fa48
 EBUILD linux-firmware-20130728.ebuild 3110 SHA256 e452af4188eb6aa6bbc22bc8540cf32b0fcc2ed1a28e62ca555b53219eeab054 SHA512 292051f841ab2a4f285621ccf231899222bc64aba55bb59458e2ee385eec1a3d8aca5611c8799207d67ee993dac9308a98a73a3b28f6051e86eb240bebbcfeb3 WHIRLPOOL b0eaf3dc23c546cac3de05aa93b98919df7083a264f872d2b17d679a8da70281e77b271b633680a913b6e2c815abe3d73d6a9f53f31a4af898a9aa4c899cc9ca
 EBUILD linux-firmware-20131230.ebuild 3111 SHA256 c4ed032b6d9ad7a58b19034429462759eed061cbbe54bad54e6af715b06d3716 SHA512 bd02cc7b4bb131afdbfc57764e6d511b61809befaa5b3d14f397d03676db03f9269bf13b4806d5ec09c86d70fb7962278238e26874ac9013559a72ece986bc4b WHIRLPOOL 622a3dc798154235116dc364b4395c566346ce5e77d8989c7d6424c8b04dac63197af1390f35b5eecc0e9ae8312150d2c499ba87c692e9951f57a17d7a89b5c1
 EBUILD linux-firmware-20140603.ebuild 3125 SHA256 509de087c11540123891687dae5b82ef366e0aa83e29ec57d0cfb9a1d31a7036 SHA512 430b8848eec817a54f3e6d18a777753faf4c27f939dfcd0e48ee49f91fa696c2c0cd39a64b3b4317601718080b259b084f8420707e11922b312bec818748c4b0 WHIRLPOOL b5bf5cb13351faae5663eb2ad7a2f7e4f5f8658fe93d196856201584722a3a37573f6a227231dbb5dd25dc45257b9f13e61c6e9e29757eecf4d0abcfca4fceb4
 EBUILD linux-firmware-20140809.ebuild 3121 SHA256 aacb838b3f39f184b7f94339b011f3287703a3c8c6c2b6ee44e52ce54219f745 SHA512 a266e6c97f0b72a0d8cbbe96d0774899d46c8aaf44e10b2e52df516636dfe1710bde9a14bdd010d7a8d1b68ee37fdb122340dbed95f10503457d22dce42ded97 WHIRLPOOL f84fe896887b7b16efe04c0fc9258efd4f2634d90b893971e58a150adfd9097378bdbee8b0161eb440f0b79ebc0108a699073144201533d28c3a63e172a2a6eb
+EBUILD linux-firmware-20140902.ebuild 3121 SHA256 35134a67608869216a421ca05b85682fcda268f32908368a7532d8c697b0b690 SHA512 920f3707437b47e9207cbbbabc3f273d794b9de6a318020591a82a384396f1905a7d3c36ba9cde80995d90d3b49e30bc0b362bd979951a6422ab35e79ef03ab9 WHIRLPOOL 95a7fa4043088e1f0bec2929197d2d57fdd8bcb278ee2aa7b4d96dd22646b39105fb7f60389888b52a5c440a1dbced7b7b305ffbc5bf5a0696222454c8e8951f
 EBUILD linux-firmware-99999999.ebuild 3120 SHA256 306d4f1fc6de90d2da27fb0a30c8a9256f4bfd9ae6b880dff3eaa84bb1980042 SHA512 3650ea70347531d39841beec11e38475b115a77c5cffdcf06f3785deab31a0c3eeee9606a280e0ca8fba724468c9288c8e70d0ff203241f194cf2961d68f6fe3 WHIRLPOOL 3f5c602514aa0141c562661743bb1eaaf7720aa945d4eda169392e3c6e404136d3817ce1396d4eeee494d94ebf43f705a1d5a8e2b94bd0a23aa3575d24b3c8a9
-MISC ChangeLog 18261 SHA256 424e43efb5f9509b76b91a56e61917e84eee20abd2b0e3c651a1902998d96b3d SHA512 c9df069663b5185dfba4ab5a6c3a371b6cd8b74735c5d84996990bc804e32098acf7fc6dcb14d514b50153c5af2c2d96b9f26e5f8dfad66faec48885b8667f58 WHIRLPOOL fe402febc7c06440b2e462fbb31268851aa59c1ae507835c55345fa9616ccfb1df244f0772d1df011b0f18ae9bc9034808e7acac640dab70b29f0625ff252b65
+MISC ChangeLog 18424 SHA256 112673f65df2255bd05967804dd36069aad087d169e78f05d189e95c2fdff039 SHA512 410ab6bbd4bce71541647dc3ad8e06c6dc5d947a21fcb7aa7d15b1d233e1a9ab9c9f90e72a870780381189467377e2ab4bf0344f37f3116823bea9611b1c3999 WHIRLPOOL f29863a14af2be7909370d878dba4a4c0951fc4062ae79e246731ac1b3e71ff5d989d749da52f3311be42bdda67f2dce70e5878a6ee6fe2ecb032efa6231f0bd
 MISC metadata.xml 544 SHA256 fff409ecefbc4cf4505e7f3f09b8ffe2b599a4c2456fe80835342638fb71a2de SHA512 8a9fc249065f998914a4f8ca92a0c3060aec81ead8e42ea11b08d1100c2e992e3a07077e57b7f8b26ee041d41fbfc127ee93cb00cebb4e7e875d968c86dcc2dd WHIRLPOOL b023523bcf71d0cc69351371ab1dd95a634d6980427b06e6450903115852ee7cebbfcae6f4a5365b42620c25ec6927e82777d26dff50aa719e1043f20d0746b0
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iEYEAREIAAYFAlQVXfQACgkQkKaRLQcq0GKZbgCfUJpbW5XcFToH7MkeYt43xQpP
-CVkAoI7z8wdFCANJ4xM7i8LA9fANVgNQ
-=8Ca6
+iQJ8BAEBCABmBQJUFfQUXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ1RDFCODdDQUUxMkUwNkJCNjUyMDMxOEIy
+MzI0RTdCNTY2REYyNjExAAoJECMk57Vm3yYRQiAQAIGqxDztpZUJ9fOb9SzkuncH
+GegeJIBniLjjbbITw8xmfqJZkTgk0S718jCy9mblEwfQWlPqQ84C5DwLyExXsBs3
+FiU3SdqUgD7qDsHor6gUCwy8LRrDXGyCvm1S8Wn9NkAUzJIqGEYCYV8C9hS6EiLv
+Jmg5drB1sBHmNRBRxOyUN5nFLLYoGl0wsAm3g9r9bV6ZxPA4No5u12v+hdhsVWUJ
+zl9i3qAokheE/UOphwcQH/ZIo5FsLa3LJivVLahophZYj5kBI2AQjeqDzwL10YO6
++AL7xORfzlU4FyFG4h9yBTjPNpIHm201ocJFchBc9eFwYARZ5294QIDupWfbeB/u
+OHhReB3MQwtvD1eE/Ri+54gDBuRAMCTJIVFtIl6UiGCfYHTuZiieLZ8VHKr7el/U
+ML66BLSLK6lRyjprqI6yI0Rvc5E6Sh28MCOhUzmN1a8KnjM+QCVEShlqfHjoiIMw
+5XFWg9vdCKscFg/GpJAjmLyQwF31MalNTUqiaQ1tsHcls95cFoMaa1eAawplnCLY
+CrANo4MlGHYMAHzh+Y0hHDZfIo7oDmY04XT0JejJqJ67N1QlqT7MhIouCqoEZIkA
+hg0MTbafHtUya/rjCKLcyJgi21FjF68OWOMDteslGjc2ryG7a4gW6w0sslwyhifb
+S9Hhppw4Afx3Jct6/L7W
+=hLSd
 -----END PGP SIGNATURE-----
