@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/linux-firmware
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/linux-firmware/ChangeLog,v 1.105 2014/09/14 09:20:51 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/linux-firmware/ChangeLog,v 1.106 2014/09/14 20:00:52 chithanh Exp $
+
+*linux-firmware-20140902 (14 Sep 2014)
+
+  14 Sep 2014; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  +linux-firmware-20140902.ebuild:
+  New snapshot.
 
   14 Sep 2014; Markus Meier <maekke@gentoo.org> linux-firmware-20140603.ebuild:
   arm stable, bug #521380
